<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.albertlardizabal.packoverflow.ui.MainActivity">

    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_vector_calendar"
        android:title="@string/action_calendar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_vector_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete_selected"
        android:orderInCategory="100"
        android:title="@string/action_delete_selected"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_list"
        android:orderInCategory="200"
        android:title="@string/action_delete_list"
        app:showAsAction="never" />
</menu>