<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="88dp"
				android:orientation="vertical">

	<CheckBox
		android:id="@+id/list_item_checkbox"
		android:layout_width="wrap_content"
		android:contentDescription="@string/description_select_item"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/list_item_quantity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:text="@string/placeholder_quantity"/>

	<TextView
		android:id="@+id/list_item_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/list_item_checkbox"
		android:layout_toLeftOf="@+id/list_item_quantity"
		android:layout_toRightOf="@+id/list_item_checkbox"
		android:layout_toStartOf="@+id/list_item_quantity"
		android:paddingEnd="@dimen/standard_margin"
		android:paddingLeft="@dimen/standard_margin"
		android:paddingRight="@dimen/standard_margin"
		android:paddingStart="@dimen/standard_margin"
		android:text="@string/placeholder_title"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/list_item_subtitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/list_item_title"
		android:layout_toEndOf="@+id/list_item_checkbox"
		android:layout_toLeftOf="@+id/list_item_quantity"
		android:layout_toRightOf="@+id/list_item_checkbox"
		android:layout_toStartOf="@+id/list_item_quantity"
		android:paddingEnd="@dimen/standard_margin"
		android:paddingLeft="@dimen/standard_margin"
		android:paddingRight="@dimen/standard_margin"
		android:paddingStart="@dimen/standard_margin"
		android:paddingTop="@dimen/standard_margin"
		android:text="@string/placeholder_subtitle"/>

	<View
		android:layout_alignParentBottom="true"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="15dp"
		android:background="@color/colorVeryLightGray"/>

</RelativeLayout>